--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 body {
-    font-family: Helvetica sans-serif;
+    font-family: Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     background-color: #222;
     overflow: hidden;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-         -o-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    user-select: none;
 }
 
 canvas {
@@ -25,4 +21,20 @@ canvas {
     color: #eee;
     font-size: 13px;
     background-color: rgba(0, 0, 0, .5);
+}
+
+#restartBtn {
+    position: absolute;
+    top: 30px;
+    left: 10px;
+    padding: 5px 10px;
+    font-size: 13px;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+#restartBtn:hover {
+    background-color: rgba(255, 255, 255, 0.4);
 }
